<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/tv_symbol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="symbol"
        android:textColor="@color/colorPrimaryDark" />
    <!--android:layout_weight="1"-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:textColor="@color/colorPrimaryDark" >

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/stock_name"
            android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:id="@+id/tv_last_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.63"
            android:text="@string/last_price"
            android:textColor="@color/colorPrimaryDark"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:textColor="@color/colorPrimaryDark" >

        <TextView
            android:id="@+id/tv_time_stamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/time_stamp"
            android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:id="@+id/tv_high"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/high"
            android:textColor="@color/colorPrimaryDark"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/low"
            android:textColor="@color/colorPrimaryDark"
            />

        <TextView
            android:id="@+id/tv_open"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.73"
            android:text="@string/open"
            android:textColor="@color/colorPrimaryDark"/>
    </LinearLayout>

</LinearLayout>
